overflow bug at about page for iphone

--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@ h1 {
 /* about page ------------------------------------------------------------*/
 
 /* music page ------------------------------------------------------------*/
+
 .musicpage-container {
     position: relative;
     z-index: 1;
@@ -217,9 +218,11 @@ h1 {
     opacity: 0.7;
     z-index: -2;
 }
+
 /*music page ------------------------------------------------------------*/
 
 /* music page ------------------------------------------------------------*/
+
 .gigspage-container {
     position: relative;
     z-index: 1;
@@ -231,10 +234,11 @@ h1 {
     width: 100%;
     height: 100%;
     background: url('../images/papertexture.png') repeat left center scroll;
-    
+
     opacity: 0.9;
     z-index: -2;
 }
+
 /*music page ------------------------------------------------------------*/
 
 /* media queries */
@@ -354,7 +358,7 @@ h1 {
         align-items: center;
         justify-content: center;
     }
-    
+
     .landingButtons {
         color: black;
         -webkit-text-fill-color: white;
@@ -362,7 +366,7 @@ h1 {
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: black;
     }
-    
+
     /* landing page ------------------------------------------------------------*/
     /* music page ------------------------------------------------------------*/
     .spotify-widget-1 {
@@ -586,7 +590,14 @@ h1 {
         width: 100vw;
     }
     .card-img-top {
-        height: 93vh;
+        height: 40vh;
+        width: 15vw;
+        text-align: -webkit-center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top:5px;
+        
     }
     /* about page ------------------------------------------------------------*/
     /* music page ------------------------------------------------------------*/
